fix: moving on mobile

--- a/apps/web/public/css/site.css
+++ b/apps/web/public/css/site.css
@@ -1549,6 +1549,7 @@ html, body, .client, iframe {
     width: 100%;
     height: 100%;
     border: none;
+    overflow: hidden;
 }
 
 .client-page .client-controls {
